@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.25
+    Translation of CVS Revision: 1.27
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -22,8 +22,14 @@ Nos articles&nbsp;:
     Han-Wen Nienhuys, <em>LilyPond, Automated music formatting and the
       Art of Shipping</em>. Forum Internacional Software Livre 2006
       (FISL7.0) (<a
-href="@IMAGES@FISL7-slides.pdf">PDF 1095k</a>)
+href="@IMAGES@FISL7-slides.pdf">PDF 1095 ko</a>)
 
+<li>
+   Erik Sandberg, <em>Séparer le langage source et le système de
+   formatage dans GNU LilyPond</em> (Separating input language and
+   formatter in GNU Lilypond). Thèse de Master, Université d'Uppsala,
+   Département d'informatique, mars 2006.
+(<a href="@IMAGES@report.pdf">PDF 750 ko</a>)
 </ul>
 
 
