@@ -1,3 +1,7 @@
+2006-10-22  John Mandereau  <john.mandereau@free.fr>
+
+	* fr/about/pubs.html: update translation (add erik's thesis).
+
 2006-10-21  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* site/news.ihtml (href): 2.9.26
